# xpulumi

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  poetry.lock.bak  pyproject.toml
scripts/: init-external-env.sh  publish-install-scripts.sh  xpulumi-init-env-alpha.sh
tests/: test_s3_wait.py
trash/installer_trash/: util.py
trash/installer_trash/aws_cli/: installer.py
trash/installer_trash/docker/: installer.py
trash/installer_trash/poetry/: installer.py
trash/installer_trash/pulumi/: installer.py
vscode/: launch.json  settings.json
xp/backend/local/: backend.json
xp/backend/local/state/: .gitignore
xp/backend/local/state/g/be-bucket-492598163938-us-west-2/.pulumi/backups/global/: global.1648332382118847448.json.attrs  global.1648332420779702595.json  global.1648332420779702595.json.attrs  global.1648332700117862013.json.attrs  global.1648332717863084326.json  global.1649698625946721600.json  global.1649698625946721600.json.attrs  global.1649698639635576678.json  global.1649698639635576678.json.attrs  global.1649698706617144935.json  global.1649698706617144935.json.attrs
xp/backend/local/state/g/be-bucket-492598163938-us-west-2/.pulumi/history/global/: global-1648332382118609447.checkpoint.json  global-1648332700117521803.history.json  global-1648332700117521803.history.json.attrs
xp/backend/local/state/g/s3_backend/.pulumi/backups/global/: global.1649708207888782187.json.attrs  global.1649708365432854265.json.attrs  global.1649710923836804769.json  global.1649711199516832506.json.attrs  global.1649711533149349551.json  global.1649711533149349551.json.attrs  global.1650646463471581932.json  global.1650646463471581932.json.attrs
xp/backend/local/state/g/s3_backend/.pulumi/history/global/: global-1649708096871896061.checkpoint.json  global-1649708096871896061.checkpoint.json.attrs  global-1649708096871896061.history.json  global-1649708096871896061.history.json.attrs  global-1649708207888463269.checkpoint.json  global-1649708207888463269.history.json  global-1649708207888463269.history.json.attrs  global-1649708365432474722.checkpoint.json  global-1649708365432474722.history.json  global-1649708365432474722.history.json.attrs  global-1649710923836460768.checkpoint.json.attrs  global-1649710923836460768.history.json  global-1649710923836460768.history.json.attrs  global-1649711199516464963.checkpoint.json  global-1649711199516464963.history.json  global-1649711199516464963.history.json.attrs  global-1649711533148980383.history.json  global-1649711533148980383.history.json.attrs  global-1650646463470904306.history.json  global-1650646463470904306.history.json.attrs  global-1650646535061226796.checkpoint.json  global-1650646535061226796.checkpoint.json.attrs  (+2 more)
xp/backend/s3/: backend.json  backend.yaml
xp/project/aws-env/: Pulumi.dev.yaml.bak  Pulumi.yaml
xp/project/awsenv/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/datavol/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/dev-box/: Pulumi.dev.yaml  __main__.py
xp/project/devbox/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/helloworld/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/s3-backend-bucket/: __main__.py  xpulumi-project.json
xp/project/s3_backend/: Pulumi.global.yaml  Pulumi.yaml  xpulumi-project.yaml
xp/project/test-project/: Pulumi.dev.yaml
xp/project/testproject/: Pulumi.yaml
xpulumi/: __init__.py  __main__.py  api_client.py  backend.py  base_context.py  cli.py  cloud_init_data.py  cmd_init_env.py  config.py  constants.py  context.py  exceptions.py  internal_types.py  passphrase.py  project.py  s3_object_waiter.py  simple.py  stack.py  test_func.py  user_data.py  util.py  version.py
xpulumi.d/backend/ext-bucket/: backend.json
xpulumi.d/backend/local/: backend.json
xpulumi.d/backend/s3/: backend.json
xpulumi.d/project/aws-env/: Pulumi.dev.yaml  __main__.py  temp.txt
xpulumi.d/project/dev-box/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  err.txt  test.txt  xssh
xpulumi.d/project/s3-backend-bucket/: Pulumi.global.yaml  Pulumi.yaml  __main__.py  xpulumi-project.json
xpulumi.d/project/test-project/: Pulumi.yaml  __main__.py  config.dev.yaml  config.yaml  pulumi.sh  test.sh
xpulumi/aws_sam/: __init__.py  cli_wrapper.py  lambda_builder.py  util.py
xpulumi/installer/: __init__.py  util.py
xpulumi/installer/aws_cli/: __main__.py  installer.py
xpulumi/installer/docker/: __main__.py  installer.py
xpulumi/installer/gh/: __main__.py  installer.py
xpulumi/installer/os_packages/: __init__.py  util.py
xpulumi/installer/poetry/: __main__.py  installer.py
xpulumi/installer/pulumi/: __init__.py  __main__.py  installer.py
xpulumi/pulumi_cli/: __init__.py  __main__.py  custom_handlers.py  help_metadata.py  installer.py  wrapper.py
xpulumi/pulumi_cli/custom_handlers/: __init__.py  destroy.py  preview_up.py  refresh.py  stack_ls.py  stack_rm.py
xpulumi/resources/bash_scripts/: init-env  install-docker.sh
xpulumi/runtime/: __init__.py  cloudwatch.py  common.py  dns.py  ebs_volume.py  ec2_instance.py  ec2_keypair.py  s3_object_waiter.py  sample_main.py  security_group.py  stack_outputs.py  user_data.py  util.py  vpc copy.py  vpc.py
xpulumi/runtime_support/: __init__.py  encrypted_string_provider.py  file_hash_provider.py  hashed_password_provider.py  s3_future_object_provider.py  ssh_hostkey_provider.py
xpulumi/standard_stacks/aws_env_v1/: __main__.py  impl.py
xpulumi/standard_stacks/data_vol_v1/: __main__.py  impl.py
xpulumi/standard_stacks/dev_box_v1/: __main__.py  impl.py
xpulumi/standard_stacks/hello_world_v1/: __init__.py  impl.py
xpulumi/standard_stacks/s3_backend_v1/: __main__.py  impl.py
xpulumi_installer/: __init__.py  __main__.py  cli.py  cmd_install.py  exceptions.py  version.py
(+16 files in other folders)
